# Trading-Exchange-Simulator

./: .dockerignore  .env.example  README.md  docker-compose.yml  railway.toml
.github/workflows/: ci.yml
engine/matching-engine-cpp/: CMakeLists.txt
engine/matching-engine-cpp/include/: MatchingEngine.h  Order.h  OrderBook.h
engine/matching-engine-cpp/src/: MatchingEngine.cpp  Order.cpp  Orderbook.cpp  main.cpp
engine/matching-engine-cpp/tests/: MatchingEngineTest.cpp  OrderBookTest.cpp
frontend/: index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.node.json  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/components/: AccountBar.tsx  Header.tsx  OpenOrders.tsx  OrderBook.tsx  OrderEntry.tsx  Positions.tsx  PriceChart.tsx  TradeFeed.tsx
frontend/src/context/: AuthContext.tsx
frontend/src/hooks/: useApi.ts  useDashboardData.ts  useWebSocket.ts
frontend/src/pages/: DashboardPage.tsx  LoginPage.tsx
frontend/src/types/: index.ts
frontend/src/utils/: format.ts
infra/postgres/: 001_init.sql
services/api-gateway/: Dockerfile  package-lock.json  package.json  tsconfig.json
services/api-gateway/src/: app.ts  config.ts  logger.ts  server.ts
services/api-gateway/src/db/: accounts.ts  audit.ts  client.ts  orders.ts  refresh-tokens.ts  risk.ts  users.ts
services/api-gateway/src/middleware/: authenticate.ts
services/api-gateway/src/routes/: account.ts  auth.ts  orderbook.ts  orders.ts  trades.ts  ws.ts
services/api-gateway/src/services/: engine.ts  redis.ts  ws-manager.ts
services/api-gateway/types/: index.ts
(+4 files in other folders)
